--- a/index.html
+++ b/index.html
@@ -49,13 +49,17 @@
         <section class="hero-section">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <h1 class="display-4">An extraordinary and visionary Web Developer</h1>
-                        <p class="lead">Where creativity, talent, and passion converge to redefine digital excellence.
-                        </p>
+                    <div class="col-lg-6 center-items text-center">
+                        <h1 class="display-4 section-header">An extraordinary and visionary Web Developer</h1>
+                        <div class="typewriter">
+                            <p id="text" class="lead paragraph-header">Where creativity, talent, and passion converge to redefine digital excellence.</p>
+                        </div>
                     </div>
-                    <div class="col-lg-6 text-center">
-                        <img src="img/alexander.png" alt="Alexander" class="img-fluid rounded-circle">
+                    <div class="col-lg-6 d-flex justify-content-center">
+                        <div class="image-container">
+                            <img src="img/alexander.png" alt="Alexander" class="img-fluid  image">
+                        </div>
+
                     </div>
                 </div>
             </div>
