--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+        
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -19,7 +21,7 @@
         <!-- Navigation and other header content -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#">ALEXANDER AZPURUA</a>
+                <a class="navbar-brand" href="#">ALEXANDER AZPURUA </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,10 +35,8 @@
                             <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item custom-center">
-                            <label class="switch">
-                                <input type="checkbox" id="darkModeToggle">
-                                <span class="slider round"></span>
-                            </label>
+                           
+                            <i id="darkModeToggle" class="bi bi-moon-fill"></i>
                         </li>
                     </ul>
                 </div>
