style changes background image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="hero-section">
+        <section class="hero-section d-flex align-items-center">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 center-items text-center">
@@ -59,6 +59,7 @@
                         <div class="image-container">
                             <img src="img/alexander.png" alt="Alexander" class="img-fluid  image">
                         </div>
+                        
 
                     </div>
                 </div>
